Add package.json and tailwind.config.js to .gitignore file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="bg-[#f4f4f4] text-white">
     <section id="hero" class="grid md:grid-cols-2">
       <div id="hero-title" class="text-[#121212] p-6 sms:px-[min(5rem,32%)] sms:py-[min(20%,4rem)]">
-        <h1 class="text-[2rem] sm:text-[3rem] leading-snug text-balance font-semibold">Introducing iPhone 16: Redefining Innovation and <span class="text-orange-500">Connectivity!</span></h1>
+        <h1 class="text-fluid-sm sm:text-[3rem] leading-snug text-balance font-semibold">Introducing iPhone 16: Redefining Innovation and <span class="text-[#5325f2]">Connectivity!</span></h1>
         <p class=" mt-4 font-graph text-balance opacity-70 font-xl">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias voluptates esse illum! Itaque praesentium ullam quasi ducimus soluta. Magni impedit amet totam, corporis deserunt tempore voluptatibus alias dolor? Voluptas.</p>
       </div>
       <section class="h-screen w-full grid max-w-[700px] mx-auto place-items-center p-4 sm:px-[min(0rem,32%)] sm:py-[min(10%,41px)]">
@@ -40,7 +40,7 @@
             class="bg-[#f3f3f3] h-2 w-[min(100%-2rem,4rem)] absolute bottom-6 left-1/2 -translate-x-1/2 rounded-xl"
           ></div>
           <div class="h-full w-full -z-10 scale-[1.005] object-cover  bg-white rounded-[inherit] overflow-clip">
-            <video class="h-full w-full object-cover object-center" poster="assets/images/female-tourist-balcony-from.jpg" autoplay  muted loop src="assets/videos/0309.mp4"></video>
+            <video class="h-full w-full object-cover object-center" poster="assets/images/female-tourist-balcony-from.jpg" autoplay  muted loop src="assets/videos/vecteezy_stylish-3d-abstract-animation-color-wavy-smooth-concept_7462855.mp4"></video>
           </div>
           
         </div>
